@@ -37,6 +37,9 @@
             <syscall name="DebugSnapshot" />
             <syscall name="DebugNameThread"/>
         </config>
+        <config condition="defined CONFIG_DEBUG_BUILD &amp;&amp; CONFIG_MAX_NUM_NODES > 1">
+            <syscall name="DebugSendIPI"/>
+        </config>
         <config condition="defined CONFIG_DANGEROUS_CODE_INJECTION">
             <syscall name="DebugRun"/>
         </config>
