@@ -41,6 +41,7 @@ Upcoming release: BREAKING
 * Non-hyp support added for Arm GICv3 interrupt controller.
 * Add initial i.MX8M Quad evk 64-bit Support. Currently only AArch64 EL1 non-secure is supported.
 * Add FVP platform with fixed configuration. This currently assumes A57 configuration described in tools/dts/fvp.dts.
+* Add new seL4_DebugSendIPI syscall to send arbitrary SGIs on ARM when SMP and DEBUG_BUILD are activated.
 
 ## Upgrade Notes
 ---
